--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -45,21 +45,15 @@ mplfinance==0.12.7a17 # LEVEL_05 # Utilities for the visualization, and visual a
 #
 # Hard dependencies
 #
-gast==0.4.0 # LEVEL_01 # LOCKED # tensorflow 2.6.0 <0.5.0 # Python AST that abstracts the underlying Python version
+gast==0.4.0 # LEVEL_01 # LOCKED # tensorflow 2.7.0 <0.5.0 # Python AST that abstracts the underlying Python version
 absl-py==0.12.0 # LEVEL_02 # LOCKED # tensorflow-metadata 1.2.0 has requirement absl-py<0.13,>=0.9 # Abseil Python Common Libraries, see https://github.com/abseil/abseil-py
 #
 pystan==2.19.1.1 # LEVEL_02 # LOCKED # POST_INSTALL_00 # prophet 1.0.1 has requirement pystan~=2.19.1.1 # Python interface to Stan, a package for Bayesian inference
 cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.68 # Python interface to CmdStan
 #
-graphviz==0.17 # LEVEL_01 # LOCKED # needed for dependecy graphing .. missing dependencies, but still needed # Simple Python interface for Graphviz
+Box2D==2.3.2 # LEVEL_01 # LOCKED # more recent versions, like 2.3.10 do not work # Python Box2D
 #
-Box2D==2.3.2 # LEVEL_01 # LOCKED # Python Box2D
-#
-kaleido==0.2.1 # LEVEL_01 # LOCKED # somehow can't update to 0.2.1.post # Static image export for web-based visualization libraries with zero dependencies
-#
-smmap==4.0.0 # LEVEL_01 # LOCKED # can't update to 5.0.0 yet, due to gitdb ? # A pure Python implementation of a sliding window memory map manager
-#
-pyparsing==2.4.7 # LEVEL_01 # LOCKED # packaging 21.2 requires pyparsing<3,>=2.0.2; httplib2 0.20.1 requires pyparsing<3,>=2.4.2 # Python parsing module
+kaleido==0.2.1 # LEVEL_01 # LOCKED # .post1 does not work # Static image export for web-based visualization libraries with zero dependencies
 #
 stable-baselines3==1.2.0 # LEVEL_05 # LOCKED # version 1.3.0 depends on gym<0.20 :-( # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms
 #
@@ -67,7 +61,7 @@ optional-django==0.1.0 # LEVEL_01 # LOCKED # nodejs needs it # Utils for apps to
 #
 textblob==0.15.3 # LEVEL_03 # LOCKED # spacytextblob 3.0.1 requires textblob<0.16.0,>=0.15.3 # Simple, Pythonic text processing. Sentiment analysis, part-of-speech tagging, noun phrase parsing, and more
 #
-docutils==0.17.1 # LEVEL_01 # LOCKED # sphinx 4.2.0 requires docutils<0.18,>=0.14 # Docutils -- Python Documentation Utilities
+docutils==0.17.1 # LEVEL_01 # LOCKED # sphinx 4.3.0 requires docutils<0.18,>=0.14 # Docutils -- Python Documentation Utilities
 #
 tenacity==6.3.1 # LEVEL_02 # LOCKED # luigi requires tenacity<7,>=6.3.0 # Retry code until it succeeds
 #
@@ -93,7 +87,9 @@ flatbuffers==2.0 # LEVEL_01 # The FlatBuffers serialization format for Python
 wrapt==1.13.3 # LEVEL_01 # Module for decorators, wrappers and monkey patching
 panel==0.12.5 # LEVEL_04 # A high level app and dashboarding solution for Python
 bokeh==2.4.2 # LEVEL_03 # Interactive plots and applications in the browser from Python
-jupyter-bokeh==3.0.4 # LEVEL_09 # A Jupyter extension for rendering Bokeh content
+graphviz==0.18.2 # LEVEL_01 # needed for dependecy graphing .. missing dependencies, but still needed # Simple Python interface for Graphviz
+smmap==5.0.0 # LEVEL_01 # A pure Python implementation of a sliding window memory map manager
+pyparsing==3.0.6 # LEVEL_01 # Python parsing module
 #
 # Generic Low Level Tools
 #
@@ -422,6 +418,7 @@ s3transfer==0.5.0 # LEVEL_04 # An Amazon S3 Transfer Manager
 #
 # Jupyter
 #
+jupyter-bokeh==3.0.4 # LEVEL_09 # A Jupyter extension for rendering Bokeh content
 jupyter==1.0.0 # LEVEL_09 # Jupyter metapackage. Install all the Jupyter components in one go
 jupyterlab==3.2.4 # LEVEL_08 # JupyterLab computational environment
 jupyter-server-proxy==3.1.0 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
