--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -1137,7 +1137,7 @@ casadi==3.5.5 # LEVEL_01 # CasADi -- framework for algorithmic differentiation a
 do-mpc==4.3.3 # LEVEL_04
 #
 
-#mkl==2022.0.0 # LEVEL_02 # Intel® oneAPI Math Kernel Library
+mkl==2022.0.0 # LEVEL_02 # Intel® oneAPI Math Kernel Library
 #openvino==2021.4.2 # LEVEL_02 # Intel's Toolkit # https://docs.openvinotoolkit.org # Inference Engine Python* API
 #openvino-dev==2021.4.1 # LEVEL_99 # has issues !!! # Openvino Tools
 #
@@ -1169,9 +1169,11 @@ simplecosine==1.2 # LEVEL_02 # Simple cosine distance
 #
 #
 jdcal==1.4.1 # LEVEL_01 # Julian dates from proleptic Gregorian and Julian calendars
+#
 #pandas-dedupe==1.5.0 # LEVEL_01
-dedupe-hcluster==0.3.9 # LEVEL_02 # Hierarchical Clustering Algorithms (Information Theory)
-#dedupe-variable-datetime==0.1.5 # LEVEL_01
+#dedupe-variable-datetime==0.1.5 # LEVEL_04 # CYCLICAL
+#dedupe==2.0.13 # LEVEL_03 # CYCLICAL
+#dedupe-hcluster==0.3.9 # LEVEL_02 # Hierarchical Clustering Algorithms (Information Theory)
 #
 pandoc==2.1 # LEVEL_02 # Pandoc Documents for Python
 pandocfilters==1.5.0 # LEVEL_01 # Utilities for writing pandoc filters in python
