--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -1170,10 +1170,10 @@ simplecosine==1.2 # LEVEL_02 # Simple cosine distance
 #
 jdcal==1.4.1 # LEVEL_01 # Julian dates from proleptic Gregorian and Julian calendars
 #
-#pandas-dedupe==1.5.0 # LEVEL_01
-#dedupe-variable-datetime==0.1.5 # LEVEL_04 # CYCLICAL
-#dedupe==2.0.13 # LEVEL_03 # CYCLICAL
-#dedupe-hcluster==0.3.9 # LEVEL_02 # Hierarchical Clustering Algorithms (Information Theory)
+pandas-dedupe==1.5.0 # LEVEL_07 # The Dedupe library made easy with Pandas
+dedupe-variable-datetime==0.1.5 # LEVEL_07 # CYCLICAL # DateTime variable type for dedupe
+dedupe==2.0.13 # LEVEL_06 # CYCLICAL # A python library for accurate and scaleable data deduplication and entity-resolution
+dedupe-hcluster==0.3.9 # LEVEL_02 # Hierarchical Clustering Algorithms (Information Theory)
 #
 pandoc==2.1 # LEVEL_02 # Pandoc Documents for Python
 pandocfilters==1.5.0 # LEVEL_01 # Utilities for writing pandoc filters in python
