--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -17,4 +17,21 @@ dependencies:
   - wheel=0.43.0=py311haa95532_0
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
+  - pip:
+      - filelock==3.14.0
+      - fsspec==2024.3.1
+      - intel-openmp==2021.4.0
+      - jinja2==3.1.4
+      - markupsafe==2.1.5
+      - mkl==2021.4.0
+      - mpmath==1.3.0
+      - networkx==3.3
+      - numpy==1.26.4
+      - pillow==10.3.0
+      - sympy==1.12
+      - tbb==2021.12.0
+      - torch==2.3.0+cu121
+      - torchaudio==2.3.0+cu121
+      - torchvision==0.18.0+cu121
+      - typing-extensions==4.11.0
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
