--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -9,29 +9,133 @@ dependencies:
   - python=3.11.9=he1021f5_0
   - sqlite=3.45.3=h2bbff1b_0
   - tk=8.6.14=h0416ee5_0
-  - tzdata=2024a=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.43.0=py311haa95532_0
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
+      - aiofiles==23.2.1
+      - aioitertools==0.11.0
+      - aiosignal==1.3.1
+      - annotated-types==0.6.0
+      - anyio==4.3.0
+      - appdirs==1.4.4
+      - asttokens==2.4.1
+      - async-lru==2.0.4
+      - attrs==23.2.0
+      - blinker==1.8.2
+      - cachetools==5.3.3
+      - certifi==2024.2.2
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - colorama==0.4.6
+      - contourpy==1.2.1
+      - cycler==0.12.1
+      - defusedxml==0.7.1
+      - diskcache==5.6.3
+      - dnspython==2.6.1
+      - executing==2.0.1
       - filelock==3.14.0
+      - fonttools==4.51.0
+      - frozenlist==1.4.1
       - fsspec==2024.3.1
+      - gitdb==4.0.11
+      - google-crc32c==1.5.0
+      - googleapis-common-protos==1.63.0
+      - greenlet==3.0.3
+      - grpcio==1.63.0
+      - h11==0.14.0
+      - httpcore==1.0.5
+      - idna==3.7
+      - imageio==2.34.1
+      - iniconfig==2.0.0
       - intel-openmp==2021.4.0
+      - itsdangerous==2.2.0
       - jinja2==3.1.4
+      - jmespath==1.0.1
+      - joblib==1.4.2
+      - jsonpointer==2.4
+      - jupyter-core==5.7.2
+      - kiwisolver==1.4.5
+      - lazy-loader==0.4
+      - markdown-it-py==3.0.0
       - markupsafe==2.1.5
+      - marshmallow==3.21.2
+      - mccabe==0.7.0
+      - mdurl==0.1.2
       - mkl==2021.4.0
       - mpmath==1.3.0
+      - multidict==6.0.5
+      - mypy-extensions==1.0.0
       - networkx==3.3
       - numpy==1.26.4
+      - oauthlib==3.2.2
+      - packaging==24.0
+      - parso==0.8.4
       - pillow==10.3.0
       - pip==24.0
+      - platformdirs==4.2.1
+      - pluggy==1.5.0
+      - protobuf==4.25.3
+      - pscript==0.7.7
+      - pure-eval==0.2.2
+      - pyasn1==0.6.0
+      - pyasn1-modules==0.4.0
+      - pycodestyle==2.11.1
+      - pycparser==2.22
+      - pydantic-core==2.18.2
+      - pyflakes==3.2.0
+      - pygments==2.18.0
+      - pyparsing==3.1.2
+      - pypng==0.20220715.0
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.1
+      - pywin32==306
+      - pywinpty==2.0.13
+      - pyyaml==6.0.1
+      - pyzmq==26.0.3
+      - referencing==0.35.1
+      - regex==2024.4.28
+      - requests==2.31.0
+      - rpds-py==0.18.1
+      - rsa==4.9
+      - scipy==1.13.0
       - setuptools==69.5.1
+      - six==1.16.0
+      - smmap==5.0.1
+      - sniffio==1.3.1
+      - soupsieve==2.5
       - sympy==1.12
       - tbb==2021.12.0
+      - terminado==0.18.1
+      - threadpoolctl==3.5.0
+      - tifffile==2024.5.3
+      - tinycss2==1.3.0
+      - toga-core==0.4.3
       - torch==2.3.0+cu121
       - torchaudio==2.3.0+cu121
       - torchvision==0.18.0+cu121
+      - tornado==6.4
+      - tqdm==4.66.4
+      - traitlets==5.14.3
+      - travertino==0.3.0
       - typing-extensions==4.11.0
+      - typing-inspect==0.9.0
+      - tzdata==2024.1
+      - tzlocal==5.2
+      - urllib3==2.2.1
+      - uvicorn==0.29.0
+      - vbuild==0.8.2
+      - watchfiles==0.21.0
+      - wcwidth==0.2.13
+      - webencodings==0.5.1
+      - werkzeug==3.0.3
+      - wrapt==1.16.0
+      - wsproto==1.2.0
+      - xlsxwriter==3.2.0
+      - yarl==1.9.4
+      - yoctopuce==2.0.60664
+      - zipp==3.18.1
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
