--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -16,81 +16,178 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_1
   - pip:
       - aiofiles==23.2.1
+      - aiohttp==3.9.5
       - aioitertools==0.11.0
       - aiosignal==1.3.1
+      - albumentations==1.4.6
+      - altair==5.3.0
       - annotated-types==0.6.0
       - anyio==4.3.0
       - appdirs==1.4.4
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
       - asttokens==2.4.1
       - async-lru==2.0.4
       - attrs==23.2.0
+      - beautifulsoup4==4.12.3
+      - bidict==0.23.1
+      - bleach==6.1.0
       - blinker==1.8.2
       - cachetools==5.3.3
       - certifi==2024.2.2
       - cffi==1.16.0
       - charset-normalizer==3.3.2
       - click==8.1.7
+      - clr-loader==0.2.6
       - colorama==0.4.6
+      - comm==0.2.2
       - contourpy==1.2.1
       - cycler==0.12.1
+      - dataclasses-json==0.6.5
+      - debugpy==1.8.1
+      - decorator==5.1.1
       - defusedxml==0.7.1
+      - deprecated==1.2.14
+      - dirtyjson==1.0.8
       - diskcache==5.6.3
+      - distro==1.9.0
       - dnspython==2.6.1
+      - docker-pycreds==0.4.0
+      - docstring-parser==0.16
+      - docutils==0.19
+      - email-validator==2.1.1
       - executing==2.0.1
+      - fastapi==0.109.2
+      - fastjsonschema==2.19.1
       - filelock==3.14.0
       - fonttools==4.51.0
+      - fqdn==1.5.1
       - frozenlist==1.4.1
       - fsspec==2024.3.1
       - gitdb==4.0.11
+      - gitpython==3.1.43
+      - google-api-core==2.19.0
+      - google-auth==2.29.0
+      - google-cloud-aiplatform==1.50.0
+      - google-cloud-bigquery==3.22.0
+      - google-cloud-core==2.4.1
+      - google-cloud-resource-manager==1.12.3
+      - google-cloud-storage==2.16.0
+      - google-cloud-vision==3.7.2
       - google-crc32c==1.5.0
+      - google-resumable-media==2.7.0
       - googleapis-common-protos==1.63.0
       - greenlet==3.0.3
+      - grpc-google-iam-v1==0.13.0
       - grpcio==1.63.0
+      - grpcio-status==1.62.2
       - h11==0.14.0
       - httpcore==1.0.5
+      - httptools==0.6.1
+      - httpx==0.27.0
       - idna==3.7
+      - ifaddr==0.2.0
       - imageio==2.34.1
       - iniconfig==2.0.0
       - intel-openmp==2021.4.0
+      - ipykernel==6.29.4
+      - ipython==8.24.0
+      - isoduration==20.11.0
       - itsdangerous==2.2.0
+      - jedi==0.19.1
       - jinja2==3.1.4
       - jmespath==1.0.1
       - joblib==1.4.2
+      - jsonpatch==1.33
       - jsonpointer==2.4
+      - jsonschema==4.22.0
+      - jsonschema-specifications==2023.12.1
+      - jupyter-client==8.6.1
       - jupyter-core==5.7.2
+      - jupyter-events==0.10.0
+      - jupyterlab-pygments==0.3.0
+      - kfp==2.7.0
+      - kfp-pipeline-spec==0.3.0
+      - kfp-server-api==2.0.5
       - kiwisolver==1.4.5
+      - kubernetes==26.1.0
+      - langchain==0.1.17
+      - langchain-community==0.0.37
+      - langchain-core==0.1.52
+      - langchain-openai==0.1.6
+      - langchain-text-splitters==0.0.1
+      - langsmith==0.1.54
       - lazy-loader==0.4
+      - llama-index-agent-openai==0.2.3
+      - llama-index-cli==0.1.12
+      - llama-index-core==0.10.34
+      - llama-index-embeddings-openai==0.1.9
+      - llama-index-indices-managed-llama-cloud==0.1.6
+      - llama-index-legacy==0.9.48
+      - llama-index-llms-ollama==0.1.3
+      - llama-index-llms-openai==0.1.16
+      - llama-index-multi-modal-llms-openai==0.1.5
+      - llama-index-readers-file==0.1.20
+      - llama-index-readers-llama-parse==0.1.4
+      - llama-parse==0.4.2
+      - llamaindex-py-client==0.1.19
       - markdown-it-py==3.0.0
+      - markdown2==2.4.13
       - markupsafe==2.1.5
       - marshmallow==3.21.2
+      - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
+      - mistune==3.0.2
       - mkl==2021.4.0
       - mpmath==1.3.0
       - multidict==6.0.5
       - mypy-extensions==1.0.0
+      - nbclient==0.10.0
+      - nbconvert==7.16.4
+      - nbformat==5.10.4
+      - nest-asyncio==1.6.0
       - networkx==3.3
+      - nicegui==1.4.24
+      - nltk==3.8.1
       - numpy==1.26.4
       - oauthlib==3.2.2
-      - packaging==24.0
+      - openai==1.26.0
+      - opencv-python-headless==4.9.0.80
+      - orjson==3.10.3
+      - packaging==23.2
+      - pandas==2.2.2
+      - pandocfilters==1.5.1
       - parso==0.8.4
       - pillow==10.3.0
       - pip==24.0
       - platformdirs==4.2.1
       - pluggy==1.5.0
+      - prompt-toolkit==3.0.43
+      - proto-plus==1.23.0
       - protobuf==4.25.3
       - pscript==0.7.7
+      - psutil==5.9.8
       - pure-eval==0.2.2
+      - pyarrow==16.0.0
       - pyasn1==0.6.0
       - pyasn1-modules==0.4.0
       - pycodestyle==2.11.1
       - pycparser==2.22
+      - pydantic==2.7.1
       - pydantic-core==2.18.2
+      - pydeck==0.9.0
       - pyflakes==3.2.0
       - pygments==2.18.0
       - pyparsing==3.1.2
+      - pypdf==4.2.0
       - pypng==0.20220715.0
       - python-dateutil==2.9.0.post0
+      - python-dotenv==1.0.1
+      - python-engineio==4.9.0
+      - python-json-logger==2.0.7
+      - python-multipart==0.0.9
+      - python-socketio==5.11.2
       - pytz==2024.1
       - pywin32==306
       - pywinpty==2.0.13
@@ -99,21 +196,43 @@ dependencies:
       - referencing==0.35.1
       - regex==2024.4.28
       - requests==2.31.0
+      - requests-oauthlib==2.0.0
+      - requests-toolbelt==0.10.1
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rich==13.7.1
       - rpds-py==0.18.1
       - rsa==4.9
+      - scikit-image==0.23.2
+      - scikit-learn==1.4.2
       - scipy==1.13.0
+      - sentry-sdk==2.1.1
+      - setproctitle==1.3.3
       - setuptools==69.5.1
+      - shapely==2.0.4
+      - shellingham==1.5.4
+      - simple-websocket==1.0.0
       - six==1.16.0
       - smmap==5.0.1
       - sniffio==1.3.1
       - soupsieve==2.5
+      - sqlalchemy==2.0.30
+      - stack-data==0.6.3
+      - starlette==0.36.3
+      - streamlit==1.34.0
+      - striprtf==0.0.26
       - sympy==1.12
+      - tabulate==0.9.0
       - tbb==2021.12.0
+      - tenacity==8.2.3
       - terminado==0.18.1
       - threadpoolctl==3.5.0
       - tifffile==2024.5.3
+      - tiktoken==0.6.0
       - tinycss2==1.3.0
       - toga-core==0.4.3
+      - toml==0.10.2
+      - toolz==0.12.1
       - torch==2.3.0+cu121
       - torchaudio==2.3.0+cu121
       - torchvision==0.18.0+cu121
@@ -121,16 +240,25 @@ dependencies:
       - tqdm==4.66.4
       - traitlets==5.14.3
       - travertino==0.3.0
+      - typer==0.12.3
+      - types-python-dateutil==2.9.0.20240316
       - typing-extensions==4.11.0
       - typing-inspect==0.9.0
       - tzdata==2024.1
       - tzlocal==5.2
-      - urllib3==2.2.1
+      - ujson==5.9.0
+      - uri-template==1.3.0
+      - urllib3==1.26.18
       - uvicorn==0.29.0
       - vbuild==0.8.2
+      - wandb==0.16.6
+      - watchdog==4.0.0
       - watchfiles==0.21.0
       - wcwidth==0.2.13
+      - webcolors==1.13
       - webencodings==0.5.1
+      - websocket-client==1.8.0
+      - websockets==12.0
       - werkzeug==3.0.3
       - wrapt==1.16.0
       - wsproto==1.2.0
