--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -24,11 +24,13 @@ dependencies:
       - annotated-types==0.6.0
       - anyio==4.3.0
       - appdirs==1.4.4
+      - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
       - asttokens==2.4.1
       - async-lru==2.0.4
       - attrs==23.2.0
+      - babel==2.15.0
       - beautifulsoup4==4.12.3
       - bidict==0.23.1
       - bleach==6.1.0
@@ -71,6 +73,7 @@ dependencies:
       - google-cloud-aiplatform==1.50.0
       - google-cloud-bigquery==3.22.0
       - google-cloud-core==2.4.1
+      - google-cloud-pipeline-components==2.14.0
       - google-cloud-resource-manager==1.12.3
       - google-cloud-storage==2.16.0
       - google-cloud-vision==3.7.2
@@ -98,6 +101,7 @@ dependencies:
       - jinja2==3.1.4
       - jmespath==1.0.1
       - joblib==1.4.2
+      - json5==0.9.25
       - jsonpatch==1.33
       - jsonpointer==2.4
       - jsonschema==4.22.0
@@ -105,7 +109,12 @@ dependencies:
       - jupyter-client==8.6.1
       - jupyter-core==5.7.2
       - jupyter-events==0.10.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.14.0
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.2.0
       - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.1
       - kfp==2.7.0
       - kfp-pipeline-spec==0.3.0
       - kfp-server-api==2.0.5
@@ -118,6 +127,7 @@ dependencies:
       - langchain-text-splitters==0.0.1
       - langsmith==0.1.54
       - lazy-loader==0.4
+      - llama-index==0.10.34
       - llama-index-agent-openai==0.2.3
       - llama-index-cli==0.1.12
       - llama-index-core==0.10.34
@@ -127,6 +137,8 @@ dependencies:
       - llama-index-llms-ollama==0.1.3
       - llama-index-llms-openai==0.1.16
       - llama-index-multi-modal-llms-openai==0.1.5
+      - llama-index-program-openai==0.1.6
+      - llama-index-question-gen-openai==0.1.3
       - llama-index-readers-file==0.1.20
       - llama-index-readers-llama-parse==0.1.4
       - llama-parse==0.4.2
@@ -150,11 +162,13 @@ dependencies:
       - networkx==3.3
       - nicegui==1.4.24
       - nltk==3.8.1
+      - notebook-shim==0.2.4
       - numpy==1.26.4
       - oauthlib==3.2.2
       - openai==1.26.0
       - opencv-python-headless==4.9.0.80
       - orjson==3.10.3
+      - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.2
       - pandocfilters==1.5.1
@@ -163,6 +177,7 @@ dependencies:
       - pip==24.0
       - platformdirs==4.2.1
       - pluggy==1.5.0
+      - prometheus-client==0.20.0
       - prompt-toolkit==3.0.43
       - proto-plus==1.23.0
       - protobuf==4.25.3
@@ -206,6 +221,7 @@ dependencies:
       - scikit-image==0.23.2
       - scikit-learn==1.4.2
       - scipy==1.13.0
+      - send2trash==1.8.3
       - sentry-sdk==2.1.1
       - setproctitle==1.3.3
       - setuptools==69.5.1
