--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -24,6 +24,7 @@ dependencies:
       - annotated-types==0.6.0
       - anyio==4.3.0
       - appdirs==1.4.4
+      - arena-api==2.3.3
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
@@ -35,6 +36,8 @@ dependencies:
       - bidict==0.23.1
       - bleach==6.1.0
       - blinker==1.8.2
+      - botocore==1.34.99
+      - braincube-connector==2.6.0
       - cachetools==5.3.3
       - certifi==2024.2.2
       - cffi==1.16.0
@@ -50,6 +53,7 @@ dependencies:
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.14
+      - deprecation==2.1.0
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
@@ -58,11 +62,15 @@ dependencies:
       - docstring-parser==0.16
       - docutils==0.19
       - email-validator==2.1.1
+      - exceptiongroup==1.2.1
       - executing==2.0.1
       - fastapi==0.109.2
       - fastjsonschema==2.19.1
       - filelock==3.14.0
+      - flake8==7.0.0
+      - flask==3.0.3
       - fonttools==4.51.0
+      - fpdf2==2.7.8
       - fqdn==1.5.1
       - frozenlist==1.4.1
       - fsspec==2024.3.1
@@ -70,6 +78,7 @@ dependencies:
       - gitpython==3.1.43
       - google-api-core==2.19.0
       - google-auth==2.29.0
+      - google-auth-oauthlib==1.2.0
       - google-cloud-aiplatform==1.50.0
       - google-cloud-bigquery==3.22.0
       - google-cloud-core==2.4.1
@@ -85,12 +94,15 @@ dependencies:
       - grpcio==1.63.0
       - grpcio-status==1.62.2
       - h11==0.14.0
+      - h5py==3.11.0
       - httpcore==1.0.5
       - httptools==0.6.1
       - httpx==0.27.0
+      - huggingface-hub==0.23.0
       - idna==3.7
       - ifaddr==0.2.0
       - imageio==2.34.1
+      - importlib-metadata==7.1.0
       - iniconfig==2.0.0
       - intel-openmp==2021.4.0
       - ipykernel==6.29.4
@@ -101,6 +113,7 @@ dependencies:
       - jinja2==3.1.4
       - jmespath==1.0.1
       - joblib==1.4.2
+      - json-numpy==2.0.0
       - json5==0.9.25
       - jsonpatch==1.33
       - jsonpointer==2.4
@@ -127,6 +140,7 @@ dependencies:
       - langchain-text-splitters==0.0.1
       - langsmith==0.1.54
       - lazy-loader==0.4
+      - llama-cpp-python==0.2.69
       - llama-index==0.10.34
       - llama-index-agent-openai==0.2.3
       - llama-index-cli==0.1.12
@@ -143,10 +157,12 @@ dependencies:
       - llama-index-readers-llama-parse==0.1.4
       - llama-parse==0.4.2
       - llamaindex-py-client==0.1.19
+      - markdown==3.6
       - markdown-it-py==3.0.0
       - markdown2==2.4.13
       - markupsafe==2.1.5
       - marshmallow==3.21.2
+      - matplotlib==3.8.4
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
@@ -165,7 +181,10 @@ dependencies:
       - notebook-shim==0.2.4
       - numpy==1.26.4
       - oauthlib==3.2.2
+      - ollama==0.1.9
       - openai==1.26.0
+      - opencv-contrib-python==4.9.0.80
+      - opencv-python==4.9.0.80
       - opencv-python-headless==4.9.0.80
       - orjson==3.10.3
       - overrides==7.7.0
@@ -173,6 +192,7 @@ dependencies:
       - pandas==2.2.2
       - pandocfilters==1.5.1
       - parso==0.8.4
+      - persist-queue==0.8.1
       - pillow==10.3.0
       - pip==24.0
       - platformdirs==4.2.1
@@ -197,19 +217,25 @@ dependencies:
       - pyparsing==3.1.2
       - pypdf==4.2.0
       - pypng==0.20220715.0
+      - pytest==8.2.0
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
       - python-engineio==4.9.0
       - python-json-logger==2.0.7
       - python-multipart==0.0.9
       - python-socketio==5.11.2
+      - pythonnet==3.0.3
       - pytz==2024.1
       - pywin32==306
       - pywinpty==2.0.13
       - pyyaml==6.0.1
+      - pyzbar==0.1.9
       - pyzmq==26.0.3
+      - qrcode==7.4.2
+      - qudida==0.0.4
       - referencing==0.35.1
       - regex==2024.4.28
+      - replicate==0.25.2
       - requests==2.31.0
       - requests-oauthlib==2.0.0
       - requests-toolbelt==0.10.1
@@ -218,6 +244,7 @@ dependencies:
       - rich==13.7.1
       - rpds-py==0.18.1
       - rsa==4.9
+      - ruff==0.4.3
       - scikit-image==0.23.2
       - scikit-learn==1.4.2
       - scipy==1.13.0
@@ -230,6 +257,7 @@ dependencies:
       - simple-websocket==1.0.0
       - six==1.16.0
       - smmap==5.0.1
+      - snakeviz==2.2.0
       - sniffio==1.3.1
       - soupsieve==2.5
       - sqlalchemy==2.0.30
@@ -266,6 +294,7 @@ dependencies:
       - uri-template==1.3.0
       - urllib3==1.26.18
       - uvicorn==0.29.0
+      - validators==0.28.1
       - vbuild==0.8.2
       - wandb==0.16.6
       - watchdog==4.0.0
