--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -65,6 +65,7 @@ dependencies:
       - exceptiongroup==1.2.1
       - executing==2.0.1
       - fastapi==0.109.2
+      - fastapi-cli==0.0.2
       - fastjsonschema==2.19.1
       - filelock==3.14.0
       - flake8==7.0.0
@@ -268,7 +269,7 @@ dependencies:
       - sympy==1.12
       - tabulate==0.9.0
       - tbb==2021.12.0
-      - tenacity==8.2.3
+      - tenacity==8.3.0
       - terminado==0.18.1
       - threadpoolctl==3.5.0
       - tifffile==2024.5.3
