--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -249,6 +249,7 @@ dependencies:
       - scikit-image==0.23.2
       - scikit-learn==1.4.2
       - scipy==1.13.0
+      - segment-anything==1.0
       - send2trash==1.8.3
       - sentry-sdk==2.1.1
       - setproctitle==1.3.3
