--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -108,6 +108,7 @@ dependencies:
       - intel-openmp==2021.4.0
       - ipykernel==6.29.4
       - ipython==8.24.0
+      - ipython-genutils==0.2.0
       - isoduration==20.11.0
       - itsdangerous==2.2.0
       - jedi==0.19.1
@@ -121,12 +122,16 @@ dependencies:
       - jsonschema==4.22.0
       - jsonschema-specifications==2023.12.1
       - jupyter-client==8.6.1
+      - jupyter-contrib-core==0.4.2
+      - jupyter-contrib-nbextensions==0.7.0
       - jupyter-core==5.7.2
       - jupyter-events==0.10.0
+      - jupyter-highlight-selected-word==0.2.0
       - jupyter-lsp==2.2.5
+      - jupyter-nbextensions-configurator==0.6.3
       - jupyter-server==2.14.0
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.2.0
+      - jupyterlab==4.1.8
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.1
       - kfp==2.7.0
@@ -142,8 +147,8 @@ dependencies:
       - langsmith==0.1.57
       - lazy-loader==0.4
       - llama-cpp-python==0.2.74
-      - llama-index==0.10.36
-      - llama-index-agent-openai==0.2.4
+      - llama-index==0.10.37
+      - llama-index-agent-openai==0.2.5
       - llama-index-cli==0.1.12
       - llama-index-core==0.10.36
       - llama-index-embeddings-openai==0.1.9
@@ -158,6 +163,7 @@ dependencies:
       - llama-index-readers-llama-parse==0.1.4
       - llama-parse==0.4.3
       - llamaindex-py-client==0.1.19
+      - lxml==5.2.2
       - markdown==3.6
       - markdown-it-py==3.0.0
       - markdown2==2.4.13
@@ -179,6 +185,7 @@ dependencies:
       - networkx==3.3
       - nicegui==1.4.25
       - nltk==3.8.1
+      - notebook==7.1.3
       - notebook-shim==0.2.4
       - numpy==1.26.4
       - oauthlib==3.2.2
